# winzy-screenshot

./: README.md  pyproject.toml
tests/: test_winzy_screenshot.py
winzy_screenshot/: __init__.py
