[project]
name = "winzy-screenshot"
version = "0.0.3"
description = "Screenshot using python "
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "pynput",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-screenshot"
Changelog = "https://github.com/sukhbinder/winzy-screenshot/releases"
Issues = "https://github.com/sukhbinder/winzy-screenshot/issues"
CI = "https://github.com/sukhbinder/winzy-screenshot/actions"

[project.entry-points."winzy.plugins"]
screenshot = "winzy_screenshot:screenshot_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
